# claude-code-swap

./: .gitignore  .npmignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  install.js  install.sh  package-lock.json  package.json  pyproject.toml
.github/workflows/: auto-tag.yml  publish.yml  rust.yml
crates/ccs/: Cargo.toml
crates/ccs/src/: cli.rs  color.rs  config.rs  doctor.rs  error.rs  launcher.rs  lib.rs  main.rs  presets.rs  profiles.rs  state.rs  tester.rs  wizard.rs
src/claude_swap/: __init__.py  cli.py  config.py  doctor.py  init_wizard.py  launcher.py  presets.py  profiles.py  state.py  tester.py
tests/: test_cli.py  test_config.py  test_doctor.py  test_env_resolution.py  test_launcher.py  test_profiles.py  test_state.py
