[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-swap"
version = "0.1.0"
description = "Switch Claude Code provider profiles with one command"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Justin Tieu", email = "justin@tensakulabs.com" }]
keywords = ["claude", "anthropic", "llm", "provider", "cli", "ai"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Utilities",
]
dependencies = ["PyYAML>=6.0"]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
]

[project.scripts]
ccs = "claude_swap.cli:main"

[project.urls]
Homepage = "https://github.com/tensakulabs/claude-swap"
Issues = "https://github.com/tensakulabs/claude-swap/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_swap"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
