[package]
name = "claude-code-swap"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["Justin Tieu <justin@tensakulabs.com>"]
description = "Switch Claude Code provider profiles with one command"
license = "MIT"
repository = "https://github.com/tensakulabs/claude-code-swap"
keywords = ["claude", "anthropic", "llm", "provider", "cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "ccs"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "string"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
regex = "1"
ureq = "2"
dialoguer = "0.11"
thiserror = "1"
which = "6"
tempfile = "3"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
